--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,29 @@
 astroid==2.4.2
+asyncpg==0.21.0
+bcrypt==3.2.0
+cffi==1.14.3
 click==7.1.2
+databases==0.3.2
+dnspython==2.0.0
+email-validator==1.1.1
 fastapi==0.61.1
 h11==0.9.0
+idna==2.10
 isort==5.5.3
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+nest-asyncio==1.4.1
 passlib==1.7.2
+pycparser==2.20
 pydantic==1.6.1
 PyJWT==1.7.1
 pylint==2.6.0
+python-multipart==0.0.5
 six==1.15.0
+SQLAlchemy==1.3.19
 starlette==0.13.6
 toml==0.10.1
 uvicorn==0.11.8
 websockets==8.1
 wrapt==1.12.1
+
