--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,12 @@ aioredis==1.3.1
 astroid==2.4.2
 async-timeout==3.0.1
 asyncpg==0.21.0
+atomicwrites==1.4.0
+attrs==20.2.0
 bcrypt==3.2.0
+certifi==2020.6.20
 cffi==1.14.3
+chardet==3.0.4
 click==7.1.2
 databases==0.3.2
 dnspython==2.0.0
@@ -12,21 +16,29 @@ fastapi==0.61.1
 h11==0.9.0
 hiredis==1.1.0
 idna==2.10
+iniconfig==1.0.1
 isort==5.5.3
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 nest-asyncio==1.4.1
+packaging==20.4
 passlib==1.7.2
+pluggy==0.13.1
+py==1.9.0
 pycparser==2.20
 pydantic==1.6.1
 PyJWT==1.7.1
 pylint==2.6.0
+pyparsing==2.4.7
+pytest==6.1.1
 python-multipart==0.0.5
 redis==3.5.3
+requests==2.24.0
 six==1.15.0
 SQLAlchemy==1.3.19
 starlette==0.13.6
 toml==0.10.1
+urllib3==1.25.10
 uvicorn==0.11.8
 websockets==8.1
 wrapt==1.12.1
