--- a/requirements.txt
+++ b/requirements.txt
@@ -9,21 +9,33 @@ certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
 click==7.1.2
+ConfigArgParse==1.2.3
 databases==0.3.2
 dnspython==2.0.0
 email-validator==1.1.1
 fastapi==0.61.1
-h11==0.9.0
+Flask==1.1.2
+Flask-BasicAuth==0.2.0
+gevent==20.9.0
+geventhttpclient==1.4.4
+greenlet==0.4.17
+h11==0.11.0
 hiredis==1.1.0
 idna==2.10
 iniconfig==1.0.1
-isort==5.5.3
-lazy-object-proxy==1.4.3
+isort==5.5.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+lazy-object-proxy==1.5.1
+locust==1.2.3
+MarkupSafe==1.1.1
 mccabe==0.6.1
+msgpack==1.0.0
 nest-asyncio==1.4.1
 packaging==20.4
 passlib==1.7.2
 pluggy==0.13.1
+psutil==5.7.2
 py==1.9.0
 pycparser==2.20
 pydantic==1.6.1
@@ -32,13 +44,17 @@ pylint==2.6.0
 pyparsing==2.4.7
 pytest==6.1.1
 python-multipart==0.0.5
+pyzmq==19.0.2
 redis==3.5.3
 requests==2.24.0
 six==1.15.0
 SQLAlchemy==1.3.19
-starlette==0.13.6
+starlette==0.13.8
 toml==0.10.1
 urllib3==1.25.10
-uvicorn==0.11.8
+uvicorn==0.12.1
 websockets==8.1
+Werkzeug==1.0.1
 wrapt==1.12.1
+zope.event==4.5.0
+zope.interface==5.1.2
